--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
         "symfony/console": "^3.0",
         "guzzlehttp/guzzle": "~6.0",
         "psy/psysh": "^0.7.0"
+    },
+    "require-dev": {
+        "phpmd/phpmd": "^2.3"
     }
 }
