continued working on the asat runners, move repository dir out of project to avoid issues with symlinks in vagrant

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ sudo: false
 install:
   - composer install --no-interaction --prefer-source
 
-script: vendor/bin/phpmd src text codesize,naming,design
+script: vendor/bin/phpmd src text phpmd.xml
